--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                   type="text"
                   placeholder="Bookmark Name"
                 />
+                <p id="msg" class=" alert alert-danger d-none">This site name already exists. Please use a different name.</p>
               </div>
               <div class="input mb-4">
                 <label for="url">
